_sass/pages/_courseware.scss
/* ... */
.course-material {
  padding: 0;
  width: auto;
  max-width: inherit;
  margin: 0 auto;
}

// Courses Index
// .course-menu {
//   ul {
//     list-style: none;
//     margin: 1.2em 15px 0;
//     padding: 0;
//   }

//   li {
//     display: inline;
//     margin-right: 1.2em;
//   }

//   a,a:link,a:visited {
//     display: inline-block;
//     font-size: 1.2em;
//     line-height: 1.2;
//     font-family: $gym-font-stack;
//     font-weight: bold;
//     color: #222;
//     text-transform: uppercase;
//     letter-spacing: 0.04em;
//     word-spacing: 0.04em;
//     border-bottom: 1px solid #222;;
//     margin-top: 0.125em;

//     &:active,
//     &:hover {
//       color: #222;
//       text-decoration: none;
//       border-bottom-width: 2px;
//       margin-bottom: -0.125rem;
//     }
//   }
// }


// Course tabs (reusable class)
.tabs {
  padding: 0;
  font-weight: normal;
  margin: 0 0 -12px; // offset to ensure being vertical centered above white panel
  
  li,
  .tab {
    display: inline-block;
    list-style: none;
  }

  a {
    padding: 10px 0 0;
    margin-right: 15px;
    text-transform: uppercase;
    color: currentColor;
    cursor: pointer;
    display: block;
    line-height: 20.72px;
    font-family: $gym-font-stack;
    font-size: 1.2em;
    font-weight: bold;

    // &.active:focus:hover {
    //   box-shadow: none;
    //   text-shadow: none;
    //   background: none;
    //   border: none;
    //   text-decoration: none;

    //   b {
    //     color: currentColor;
    //     border-bottom: 2px solid currentColor;
    //   }
    // }

    &.active,
    &:active,
    &:focus,
    &:hover {
      color: currentColor;
      background: none;
      text-decoration: none;
      // border: 0;

      // b {
      //   color: currentColor;
      //   border-bottom: 2px solid currentColor;
      //   text-decoration: none;
      // }
    }

    // b {
    //   text-transform: uppercase;
    //   letter-spacing: 0.05em;
    //   border-bottom: 1px solid currentColor;
    //   vertical-align: -0.15em;
    //   font-size: 1.2em;
    // }
  }
}

// Course Accordion Nav
.course-navigation {
  .group-heading {
    font-family: $gym-font-stack;
    position: relative;
    display: block;
    padding: 15px 20px 15px 40px;
    text-align: left;
    font-size: 16px;
    line-height: 23.68px;

    &.active .icon {
      color: #f89820;
    }

    .icon {
      position: absolute;
      left: 20px;
      top: 20px;
      font-size: 0.875em;
      color: #c8c8c8;
    }
  }

  .chapter {
    color: #ebebeb;
    background: none;
    box-shadow: none;
    padding: 0;
    text-decoration: none;
    
    &.is-open {
      font-weight: bold;
    }

    h3 {
      line-height: 1.3;
    }
    a {
      font-weight: 900;
      letter-spacing: 0.04em;
      word-spacing: 0.04em;
      color: #ebebeb;
      background: none;
      box-shadow: none;
      text-shadow: none;
      border-color: transparent;
      margin-bottom: 0.3em;

      p {
        font-size: 1.2em;
      }
    }
  }

  .chapter-content-container {
    background-color: inherit;

    &.is-open {
      border-bottom: 1px solid rgba(0,0,0,0.1);
    }

    .chapter-menu {
      display: none;
      padding: 0 14px 0 30px;
      overflow: hidden;

      .menu-item {
        margin: 4px 0;
        background: inherit;
        font-weight: 600;

        &.active {
          a {
            color: #f89820;
          }
        }
        &:last-of-type {
          padding-bottom: 10px;
        }

        p {
          font-size: font-calc(14, rem, 10px);
        }

        a {
          color: #ebebeb;
          background: inherit;
          border: none;
        }

        .subtitle {
          display: none;
        }
      }
    }
  }

  .button-chapter {
    &:hover {
      border: none;
    }

    &.active .group-heading {
      color: #ebebeb;
    }

    &:only-of-type {
      -moz-user-select: none;
      -webkit-user-select: none;
      -ms-user-select: none;
      user-select: none;
      cursor: text;
    }
    
    &:only-of-type:focus {
      outline: none;
    }
    
    &:only-of-type .icon {
      display: none;
    }
    
    &:only-of-type .group-heading {
      line-height: 1.25 !important;
      letter-spacing: 1px;
      text-transform: uppercase;
      margin-right: 14px;
    }
  }

  p.subtitle {
    display: none;
  }
}


// Course accordion nav... continued - not sure if we need the specificity
.course-index {
  .accordion {
    font-family: $gym-font-stack;
    background-color: #444;

    

    ul.ui-accordion-content a p {
      color: #ebebeb;
    }
    ul.ui-accordion-content li.active a p {
      color: #f89820;
      font-weight: bold;
    }
  }
}

.accordion-nav {
  background: inherit;
  border: none;
  position: relative;
  display: block;
  padding: 5px 10px;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    font-family: $gym-font-stack;
  }
}

// Course Wrapper
.course-wrapper {
  margin-top: 20px;
  
  main {
    padding: 20px;
  
    .hd-1,
    .hd-2,
    .hd-3,
    .hd-4,
    .hd-5,
    .hd-6,
    .hd-7,
    .hd-8 {
      margin: 0;
      font-weight: 400;
      font-size: inherit;
      line-height: inherit;
      color: #474747;
    }
  
    .hd-3 {
      margin-bottom: 10px;
    }
  
    h2 {
      font-weight: 600;
      text-transform: initial;
      font-size: 1.5em;
      line-height: 1.4em;
    }
  }
}



.wrap-instructor-info .instructor-info-action {
  float: right;
  margin-left: 10px;
  text-align: right;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #f2f2f2;
  color: $gym-dark-gray-2;
  text-transform: uppercase;
  font-size: 12px;
  line-height: 17.76px;
  text-decoration: none;

  &:hover {
    color: #fff;
    background-color: $gym-dark-gray-2;
  }
}

// Staff Debug Info
.course-content .vert {
  padding: 0 0 15px;
}
/* ... */

